new setting page

--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -236,7 +236,7 @@
               <li>
                 <a
                   class="group relative flex items-center gap-2.5 rounded-md px-4 font-medium text-bodydark2 duration-300 ease-in-out hover:text-white"
-                  href="settings.html"
+                  href="settings1.html"
                   :class="page === 'singin1' && '!text-white'"
                   >General Settings</a
                 >
